# kobuki_core

kobuki_dock_drive/include/kobuki_dock_drive/: dock_drive.hpp  state.hpp
kobuki_dock_drive/src/: dock_drive_states.cpp
kobuki_driver/include/kobuki_driver/packets/: firmware.hpp  hardware.hpp
kobuki_driver/src/driver/: battery.cpp  kobuki.cpp  packet_finder.cpp
kobuki_driver/src/test/: velocity_commands.cpp
kobuki_driver/src/tools/: simple_keyop.cpp
kobuki_ftdi/: CMakeLists.txt
kobuki_ftdi/cmake/: Findlibusb.cmake
kobuki_ftdi/include/kobuki_ftdi/: scanner.hpp  writer.hpp
kobuki_ftdi/src/: CMakeLists.txt  get_serial_number.cpp
